--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,6 @@ extends layout
 block content
     h1 .TAPc-han
     canvas#thegame
+        script.
+            $('#thegame').width(window.innerWidth).height(window.innerHeight);
         //You just lost it.
