--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,9 @@ doctype html
 
 head
     title TapChan.io
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/css.css')
+    meta(name='viewport' content='width = device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable = 0')
+    link(rel='stylesheet', href='/styles/style.css')
+    link(rel='stylesheet', href='/styles/css.css')
     script(src='/scripts/jquery-3.2.0.js')
     script(src='/scripts/bundle.js')
 html
