--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,20 @@
 extends layout
 
 block content
-    h1 .TAPc-han
-    canvas#thegame
+    h1#Tapchan .TAPc-han
+    //-canvas#thegame
         script.
             $('#thegame').width(window.innerWidth).height(window.innerHeight);
         //You just lost it.
+    div.guiContainer
+        button#joinGame Join Game
+        button#tryAgain(disabled) Try Again
+        button#reconnect(disabled) Reconnect
+
+        div.hud
+            div Latency:
+                span#latency N/A
+            div Average:
+                span#average N/A
+            div#score
+    div#pixi
