--- a/views/index.jade
+++ b/views/index.jade
@@ -8,8 +8,8 @@ block content
         //You just lost it.
     div.guiContainer
         button#joinGame Join Game
-        button#tryAgain(disabled) Try Again
-        button#reconnect(disabled) Reconnect
+        button#tryAgain(disabled hidden) Try Again
+        button#reconnect(disabled hidden) Reconnect
 
         div.hud
             div Latency:
